# cneuralnetwork

./: .gitignore  CMakeLists.txt  layer.cpp  layer.hpp  main.cpp  multilayer_perceptron.cpp  multilayer_perceptron.hpp  neuron.cpp  neuron.hpp  train_data.cpp  training_data.cpp  training_data.hpp  training_data_example.cpp  weight.cpp  weight.hpp  xor_example.cpp
util/: normalizer.rb
